# open-dibr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  openvr_actions.json  openvr_bindings.json
examples/Fan/: InterDigital_Copyright_Fan.docx  example.json  example_colmap.json  example_omaf.json  example_opengl.json  example_output.json  example_output_omaf.json
examples/Painter/: Interdigital_Copyright_Painter.docx  example.json  example_colmap.json  example_omaf.json  example_opengl.json  example_output.json  example_output_omaf.json
include/FFmpeg/lib/Win32/: avcodec.lib  avformat.lib  avutil.lib  swresample.lib
include/FFmpeg/lib/x64/: avcodec.lib  avformat.lib  avutil.lib  swresample.lib
include/nvdec/: nvcuvid.h
scripts/: yuv_depth_to_png.py
src/: AppDecUtils.h  Application.h  CameraVisibilityHelper.h  FFmpegDemuxer.h  MeasureFPS.h  NvCodecUtils.h  NvDecoder.cpp  NvDecoder.h  PCApplication.h  Pool.h  VRApplication.h  cameras_frag.fs  cameras_vertex.fs  copy_fragment.fs  copy_fragment_1output.fs  copy_vertex.fs  fragment.fs  geometry.fs  glHelper.h  ioHelper.h  main.cpp  postprocessing_ERP_fragment.fs  postprocessing_perspective_fragment.fs  shader.h  vertex.fs
